--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
           
           <div class="intro">
             <h2>McAfee Bulk Importer</h2>
-            <p>Please upload the CSV file that includes MD5, SHA1 or SHA256 column and values.</p>
+            <p>Please upload the CSV file that includes MD5, SHA1, SHA256 or Hostname column and values.</p>
           </div>
             <div class="custom-file mb-3">
               <input type="file" class="custom-file-input" id="customFile" name="file">
@@ -64,9 +64,8 @@
             </div>
             <div class="mt-3">
             </br>
-              <button type="button" id="upload-file-btn" class="button button-block"/>Submit</button>
+              <button type="button" id="upload-file-btn" class="button button-block">Submit</button>
               </br>
-
               <div id="myModal" class="modal">
                 <div class="modal-content" style="width: 80%">
                   <span class="close">&times;</span>
@@ -106,6 +105,7 @@
 </div> <!-- /form -->
 <!-- partial -->
 
+<!-- This part is for file upload -->
 <script>
 $(".custom-file-input").on("change", function() {
   var fileName = $(this).val().split("\\").pop();
@@ -113,13 +113,7 @@ $(".custom-file-input").on("change", function() {
 });
 </script>
 
-<script>
-$(document).ready( function () {
-    $('#table_res').DataTable();
-    $('.dataTables_length').addClass('bs-select');
-});
-</script>
-
+<!-- This part is for TIE Reputation select-->
 <script>
 function tie_rep() {
   var checkBox = document.getElementById("TIE");
@@ -135,6 +129,7 @@ function tie_rep() {
 }
 </script>
 
+<!-- This part is for the page switch -->
 <script>
 $('.tab a').on('click', function (e) {
   
@@ -152,6 +147,7 @@ $(target).fadeIn(600);
 });
 </script>
 
+<!-- This part is for the popup -->
 <script>
 var modal = document.getElementById("myModal");
 var btn = document.getElementById("upload-file-btn");
@@ -159,6 +155,7 @@ var span = document.getElementsByClassName("close")[0];
 
 btn.onclick = function() {
   modal.style.display = "block";
+  search();
 }
 
 span.onclick = function() {
@@ -167,7 +164,7 @@ span.onclick = function() {
   $('#tableResult').hide();
   $('#errorAlert').hide();
   $('#inProgress').hide();
-  location.reload();
+  location.reload(true);
 }
 
 window.onclick = function(event) {
@@ -175,6 +172,7 @@ window.onclick = function(event) {
     modal.style.display = "none";
   }
 }
+
 </script>
 
 </body>
